# FareShare

./: .gitignore  README.md  boilerplate-setup.md  dev-ios.md  package-lock.json  package.json
.github/workflows/: backend-check.yml  ci.yml  frontend-check.yml
backend/: Cargo.toml  README.md  openapi.json
backend/src/: main.rs
fare-share-app/: app.json  package-lock.json  package.json
frontend/: .eslintrc.js  .prettierignore  boilerplate-frontend.md  package-lock.json  package.json  tsconfig.json
frontend/api/: client.ts  types.ts
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
frontend/app/(tabs)/Account/: index.tsx
frontend/app/(tabs)/AddExpense/: index.tsx
frontend/app/tabs/: index.tsx
frontend/components/: Typography.tsx
frontend/components/__tests__/: ThemedText-test.tsx
frontend/components/ui/: IconSymbol.tsx
scripts/: generate-types.sh
